# Cooloc

./: .gitignore  Dockerfile  README.md  compose.yml  exemple.env  main.py  pyproject.toml  run-dev.py
app/: app.py  config.py
app/api/auth/: auth.py
app/api/v1/endpoints/: documents.py  groups.py  reimbursements.py  spendings.py  users.py
app/core/: cache.py  config.py
app/dao/: documents.py  groups.py  reimbursements.py  spendings.py  users.py  users_groups.py
app/db/: init.sql  settings.py
app/dependencies/: auth.py
app/models/: documents.py  groups.py  reimbursements.py  spendings.py  users.py
app/schemas/: auth.py  custom.py  documents.py  groups.py  reimbursements.py  spendings.py  users.py
app/services/: auth.py  documents.py  groups.py  reimbursements.py  spendings.py  users.py
app/utils/: schemas.py  security.py
sql/: Dockerfile  init.sql
